--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "oauth-callback-parser",
-  "version": "0.1.0",
+  "name": "callback-tester",
+  "version": "1.0.0",
   "private": true,
+  "author": "Pavel Gorshkov",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "highlight.js": "^11.9.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
