--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "callback-tester",
+  "name": "redirect-tester",
   "version": "1.0.0",
   "private": true,
   "author": "Pavel Gorshkov",
-  "homepage": "https://PavelG1307.github.io/callback-tester",
+  "homepage": "https://PavelG1307.github.io/redirect-tester",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
